UI Design - Du=ynamic Widget and Teme Config changes

--- a/App/ClientApp/src/app/layout/theme-configuration/theme-configuration.component.html
+++ b/App/ClientApp/src/app/layout/theme-configuration/theme-configuration.component.html
@@ -82,11 +82,11 @@
         <div class="row" *ngIf="isCustome">
           <div class="col-sm-8">
             <div class="card bg-light border-card form-group">
-              <!--<div class="card-header bg-white">
-          <label class="mb-0">Common Properties</label>
-        </div>-->
+              <div class="card-header bg-white">
+                <label class="mb-0">Select Color Theme </label>
+        </div>
               <div class="card-body">
-                <div class="row">
+                <!--<div class="row">
                   <div class="col-sm-3">
                     <label>Foreground Color</label>
                     <input type="color" class="form-control" />
@@ -95,10 +95,10 @@
                     <label>Background Color</label>
                     <input type="color" class="form-control" />
                   </div>
-                </div>
+                </div>-->
                 <div class="row mt-2">
                   <div class="col-sm-6">
-                    <label>Select Color Theme</label>
+                    <!--<label>Select Color Theme</label>-->
                     <div class="custom-control custom-radio mr-2 mb-2">
                       <input class="custom-control-input" type="radio" checked
                              name="themeChartOption" id="themeChart1" value="optionthemeChart">
@@ -125,7 +125,7 @@
                     </div>
                   </div>
                   <div class="col-sm-6">
-                    <label>&nbsp;</label>
+                    <!--<label>&nbsp;</label>-->
                     <div class="custom-control custom-radio mr-2 mb-2">
                       <input class="custom-control-input" type="radio"
                              name="themeChartOption" id="themeChart3" value="optionthemeChart">
