--- a/App/ClientApp/src/app/layout/tenants/view/view.component.html
+++ b/App/ClientApp/src/app/layout/tenants/view/view.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <div class="page-title">
-    <span class="xs-title"> Add Tenant </span>
+    <span class="xs-title"> View Tenant </span>
     <!--<span class="xs-title" *ngIf="updateOperationMode == true"> Update Tenant  </span>-->
   </div>
   <form>
@@ -36,47 +36,48 @@
             <div class="row">
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Name</label>
-              <div>Tenant 01</div>
+                <div>{{tenant.TenantName}}</div>
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Domain Name</label>
-                                          <div>Domain 01</div>
+                <div>{{tenant.TenantDomainName}}</div>
               </div>
             </div>
             <div class="row">
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Description</label>
-                <div>-</div>
+                <div>{{tenant.TenantDescription}}</div>
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Address</label>
-                <div>-</div>
+                <div>{{tenant.TenantName}}</div>
               </div>
             </div>
             <div class="row">
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Country</label>
-                <div>India</div>
+                <div>{{tenant.Country.CountryName}}</div>
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>State</label>
-                <div>MH</div>
+                <div>{{tenant.TenantState}}</div>
               </div>
             </div>
             <div class="row">
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>City</label>
-                <div>Oune</div>
+                <div>{{tenant.TenantCity}}</div>
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Postal Code</label>
-                <div>767667</div>
+                <div>{{tenant.PrimaryPinCode}}</div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="card border-0 mb-2 card-shadow">
       <div class="card-header  bg-white d-flex justify-content-between">
         <div>
@@ -101,57 +102,46 @@
           </div>
         </div>
         <div class="widget-area-grid padding-0">
-          <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+          <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
             <!-- Position Column -->
             <ng-container matColumnDef="contactType">
               <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Contact Type </th>
-              <td mat-cell *matCellDef="let tenant">{{tenant.contactType}}</td>
+              <td mat-cell *matCellDef="let contact">{{contact.ContactType}}</td>
             </ng-container>
 
             <ng-container matColumnDef="firstName">
               <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
-              <td mat-cell *matCellDef="let tenant">
-                <span *ngIf="tenant.firstName==null">-</span>
-                <span *ngIf="tenant.firstName!=null">{{tenant.firstName}} </span>
+              <td mat-cell *matCellDef="let contact">
+                <span *ngIf="contact.FirstName==null">-</span>
+                <span *ngIf="contact.FirstName!=null">{{contact.FirstName}} </span>
               </td>
             </ng-container>
             <ng-container matColumnDef="lastName">
               <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
-              <td mat-cell *matCellDef="let tenant">
-                <span *ngIf="tenant.lastName==null">-</span>
-                <span *ngIf="tenant.lastName!=null">{{tenant.lastName}} </span>
+              <td mat-cell *matCellDef="let contact">
+                <span *ngIf="contact.LastName==null">-</span>
+                <span *ngIf="contact.LastName!=null">{{contact.LastName}} </span>
               </td>
             </ng-container>
             <ng-container matColumnDef="email">
               <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-              <td mat-cell *matCellDef="let tenant">
-                <span *ngIf="tenant.email==null">-</span>
-                <span *ngIf="tenant.email!=null">{{tenant.email}} </span>
+              <td mat-cell *matCellDef="let contact">
+                <span *ngIf="contact.EmailAddress==null">-</span>
+                <span *ngIf="contact.EmailAddress!=null">{{contact.EmailAddress}} </span>
               </td>
             </ng-container>
             <ng-container matColumnDef="no">
               <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Mobile No. </th>
-              <td mat-cell *matCellDef="let tenant">
-                <span *ngIf="tenant.no==null">-</span>
-                <span *ngIf="tenant.no!=null">{{tenant.no}} </span>
+              <td mat-cell *matCellDef="let contact">
+                <span *ngIf="contact.ContactNumber==null">-</span>
+                <span *ngIf="contact.ContactNumber!=null">{{contact.CountryCode}}-{{contact.ContactNumber}} </span>
               </td>
             </ng-container>
-            <ng-container matColumnDef="actions">
-              <th class="width10" mat-header-cell *matHeaderCellDef> Action </th>
-              <td mat-cell *matCellDef="let tenant">
-                <div class="action-btns btn-tbl-action">
-                  <button type="button" id="btnUpdateRole" title="Send Activation/Reset Password Link">
-                    <span class="fa fa-external-link"></span>
-                  </button>
-                </div>
-              </td>
-            </ng-container>
+        
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
         </div>
-
-        <!--<div style="text-align:center" *ngIf="isNoRecord">No data to display</div>-->
 
       </div>
     </div>
@@ -160,8 +150,8 @@
 
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave">Update</button>
-      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete">Delete</button>
+      <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToTenantEdit()"> Update</button>
+      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete"(click)="deleteTenant()">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
