assset override issue solve

--- a/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
@@ -266,7 +266,7 @@
           <div class="input-group">
             <div class="custom-file z-index-0">
               <input *ngIf="isMultipleFileUploadEnable" #overrideFileAssetUpload class="custom-file-input"
-                     accept="{{actualSetting.VideoFileExtension}}" type="file" (click)="overrideFileAssetUpload.value = null" (change)="onOverrideHandleFileUpload($event,overrideFileAssetUpload)">
+                     accept="{{supportedOverrideFileExtension}}" type="file" (click)="overrideFileAssetUpload.value = null" (change)="onOverrideHandleFileUpload($event,overrideFileAssetUpload)">
               <label class="custom-file-label"></label>
             </div>
 
